# pineapple-lead-api

./: .dockerignore  .env.example  .gitignore  DEVELOPER.md  Dockerfile  PINEAPPLE_INTEGRATION.md  QUICKSTART.md  README.md  TESTING.md  alembic.ini  check_schema.py  curl_commands.sh  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  init_dev_db.py  main.go  pineapple_test_environment.json  pyproject.toml  requirements.txt  run_tests.bat  test_api.py  test_db_connection.py  validate_env.py
alembic/: env.py
app/: .env.example  __init__.py  main.py
app/api/: __init__.py  dependencies.py  deps.py  healthcheck.py  router.py
app/auth/: jwt_utils.py
app/config/: settings.py
app/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging_config.py  rate_limiter.py  security.py
app/crud/: crud_lead.py  crud_quote.py
app/database/: appwrite_client.py  appwrite_service.py
app/db/: __init__.py  base.py  session.py
app/middleware/: auth_middleware.py
app/models/: __init__.py  database.py  lead.py  pineapple.py  quote.py  tables.py
app/routes/: auth.py  leads.py  quotes.py
app/schemas/: __init__.py  auth_schemas.py  (+7 more)
config/: config.go
db/: db.go  migrate.go
docs/: swagger.json
fastapi-lead-quote-api/: README.md
handlers/: lead_transfer.go  quick_quote.go
init-scripts/: 01-init-db.sql
middlewares/: docs.go  rate_limit.go
migrations/: env.py
models/: models.go
repositories/: lead_repository.go  quote_repository.go
scripts/: wait-for-postgres.sh
swagger/: index.html
tests/: conftest.py
utils/: api_utils.go  validation.go
(+47 files in other folders)
